chore: test now work too